--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "NODE_ENV=production node -r ./dotenv/config app/index.js",
     "dev": "NODE_ENV=dev nodemon -r ./dotenv/config app/index.js",
     "debug": "NODE_ENV=debug node -r ./dotenv/config inspect app/index.js",
-    "test": "NODE_ENV=test jest"
+    "test": "NODE_ENV=test nyc --reporter=text ./node_modules/.bin/mocha  \"./app/tests/*.*.spec.js\" --timeout 6000 "
   },
   "repository": {
     "type": "git",
@@ -20,14 +20,20 @@
   },
   "homepage": "https://github.com/antoniogouvea/desafio-funcional#readme",
   "dependencies": {
-    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.6.0",
     "mongoose": "^5.8.11",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "sinon": "^8.1.1"
+  },
+  "devDependencies": {
+    "expect": "^25.1.0",
+    "mocha": "^7.0.1",
+    "nyc": "^15.0.0"
   }
 }
